...      midnight-dev playing Black: 146 - 135 - 223  [0.511] 504
...      White vs Black: 298 - 250 - 458  [0.524] 1006
Elo difference: 24.2 +/- 15.8, LOS: 99.9 %, DrawRatio: 45.5 %
SPRT: llr 2.95 (100.2%), lbound -2.94, ubound 2.94 - H1 was accepted

King Ring Danger Eval
Score of midnight-dev vs midnight-latest: 297 - 225 - 385  [0.540] 907
...      midnight-dev playing White: 166 - 112 - 176  [0.559] 454
...      midnight-dev playing Black: 131 - 113 - 209  [0.520] 453
...      White vs Black: 279 - 243 - 385  [0.520] 907
Elo difference: 27.6 +/- 17.2, LOS: 99.9 %, DrawRatio: 42.4 %
SPRT: llr 2.97 (100.7%), lbound -2.94, ubound 2.94 - H1 was accepted

Pawn Attack Eval
Score of midnight-dev vs midnight-latest: 686 - 597 - 1159  [0.518] 2442
...      midnight-dev playing White: 388 - 264 - 569  [0.551] 1221
...      midnight-dev playing Black: 298 - 333 - 590  [0.486] 1221
...      White vs Black: 721 - 562 - 1159  [0.533] 2442
Elo difference: 12.7 +/- 10.0, LOS: 99.4 %, DrawRatio: 47.5 %
SPRT: llr 2.96 (100.4%), lbound -2.94, ubound 2.94 - H1 was accepted

Change Score Style ~300KNps Quicker than previous implementation.
Score of midnight-dev vs midnight-latest: 258 - 193 - 440  [0.536] 891
...      midnight-dev playing White: 133 - 89 - 223  [0.549] 445
...      midnight-dev playing Black: 125 - 104 - 217  [0.524] 446
...      White vs Black: 237 - 214 - 440  [0.513] 891
Elo difference: 25.4 +/- 16.2, LOS: 99.9 %, DrawRatio: 49.4 %
SPRT: llr 2.99 (101.5%), lbound -2.94, ubound 2.94 - H1 was accepted

New Mobility Style, Kinda hate it tho
Score of midnight-dev vs midnight-latest: 883 - 783 - 1334  [0.517] 3000
...      midnight-dev playing White: 458 - 360 - 683  [0.533] 1501
...      midnight-dev playing Black: 425 - 423 - 651  [0.501] 1499
...      White vs Black: 881 - 785 - 1334  [0.516] 3000
Elo difference: 11.6 +/- 9.3, LOS: 99.3 %, DrawRatio: 44.5 %
SPRT: llr 2.95 (100.2%), lbound -2.94, ubound 2.94 - H1 was accepted